# fin-model-dash-71

./: .gitignore  README.md  README_BACKEND_INTEGRATION.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  run_backend.sh  vite.config.ts
backend/: database.py  financial_models.db  main.py  requirements.txt  run_backend.py
client/src/: App.tsx
client/src/components/: AppSidebar.tsx
client/src/components/dashboards/: SimpleDashboard.tsx  ThreeStatementDashboard.tsx
client/src/components/excel/: ColumnMapper.tsx  DataPreviewTable.tsx  index.ts
client/src/config/models/: dcfConfig.ts  index.ts  lboConfig.ts  startupConfig.ts  threeStatementConfig.ts
client/src/data/: threeStatementData.ts
client/src/pages/: Dashboard.tsx  FinancialDashboard.tsx  Home.tsx  ModelConfiguration.tsx
client/src/services/: api.ts
server/: vite.ts
src/: App.tsx
src/components/: AppSidebar.tsx  CompanyTypeSelector.tsx  PDFExporter.tsx  VariableEditor.tsx  WorkflowStepper.tsx
src/components/dashboards/: DCFDashboard.tsx  LBODashboard.tsx  StartupDashboard.tsx  ThreeStatementDashboard.tsx
src/components/excel/: ExcelUploadDialog.tsx  ImportWizard.tsx
src/config/models/: dcfConfig.ts  index.ts  lboConfig.ts
src/hooks/: useExcelImport.ts
src/pages/: CompanyTypeSelection.tsx  Dashboard.tsx  FinancialDashboard.tsx  Home.tsx  ModelConfiguration.tsx
src/types/: index.ts
