[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.4",
    "fastapi==0.116.0",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "passlib==1.7.4",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.41",
    "uvicorn==0.35.0",
]
